add images, fix styling to match new website

--- a/howitworks.html
+++ b/howitworks.html
@@ -2,7 +2,9 @@
 <html>
   <head>
     <meta charset="UTF-8">
-    <title>title</title>
+    <link rel="stylesheet" type="text/css" href="styles.css">
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300&display=swap" rel="stylesheet">
+    <title>How it Works</title>
   </head>
   <body>
     <div class="teal-bg">
@@ -18,8 +20,8 @@
       <!-- Step 1 image -->
       <div class="annotate-grid">
         <div id="image-step-1">
-          <img class="mobile-hide" src="./images/SVG/step1.svg" alt="people annotating">
-          <img class="web-hide" src="./images/SVG/flowchart-1-mobile.svg" alt="people annotating">
+          <img class="mobile-hide" src="./assets/step1.svg" alt="people annotating">
+          <img class="web-hide" src="./assets/flowchart-1-mobile.svg" alt="people annotating">
         </div>
       </div>
 
@@ -50,8 +52,8 @@
       <!-- Step 2 image -->
       <div class="annotate-grid">
         <div id="image-step-2">
-          <img class="mobile-hide" src="./images/SVG/step2.svg" alt="people annotating">
-          <img class="web-hide" src="./images/SVG/step2mobile.svg" alt="people annotating">
+          <img class="mobile-hide" src="./assets/step2.svg" alt="people annotating">
+          <img class="web-hide" src="./assets/step2mobile.svg" alt="people annotating">
         </div>
       </div>
 
@@ -83,8 +85,8 @@
       <!-- Step 3 image -->
       <div class="annotate-grid">
         <div id="image-step-3">
-          <img class="mobile-hide" src="./images/SVG/step3.svg" alt="people annotating">
-          <img class="web-hide" src="./images/SVG/step3mobile.svg" alt="people annotating">
+          <img class="mobile-hide" src="./assets/step3.svg" alt="people annotating">
+          <img class="web-hide" src="./assets/step3mobile.svg" alt="people annotating">
         </div>
       </div>
 
@@ -114,7 +116,7 @@
       <!-- Step 4 image -->
       <div class="annotate-grid">
         <div id="image-step-4">
-          <img src="./images/SVG/step4.svg" alt="people annotating">
+          <img src="./assets/step4.svg" alt="people annotating">
         </div>
       </div>
 
@@ -145,7 +147,7 @@
       <!-- Step 5 image -->
       <div class="annotate-grid">
         <div id="image-step-5">
-          <img class="mobile-hide" src="./images/SVG/step5.svg" alt="people annotating">
+          <img class="mobile-hide" src="./assets/step5.svg" alt="people annotating">
         </div>
       </div>
 
@@ -205,7 +207,7 @@
       <!-- Step 6 image -->
       <div class="annotate-grid">
         <div id="image-step-6">
-          <img src="./images/SVG/flowchart-6.svg" alt="people annotating">
+          <img src="./assets/flowchart-6.svg" alt="people annotating">
 
         </div>
       </div>
